rpa-worker-e2e-tests/v88_gw_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-gateway
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: h2c
spec:
  selector:
    app: camunda-platform
    app.kubernetes.io/component: core
  ports:
    - name: http
      port: 9600
      protocol: TCP
      targetPort: 9600
    - name: gateway
      port: 26500
      protocol: TCP
      targetPort: 26500
    - name: rest
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
