rpa-worker-e2e-tests/v88_gw_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-gateway
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: traefik
  rules:
    - host: zeebe.camunda.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-gateway
                port:
                  number: 26500
